--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "build": "./node_modules/.bin/webpack --display-error-details",
-    "start": "./node_modules/.bin/http-server dist",
+    "start": "./node_modules/.bin/webpack-dev-server --content-base dist",
     "babel": "babel src -d dist"
   },
   "repository": {
@@ -23,8 +23,7 @@
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "http-server": "^0.9.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.2"
+    "webpack": "^1.13.2"
   },
   "dependencies": {
     "babel-cli": "^6.16.0",
